# CG-projects

./: readme.md
projects/base/: application.cpp  camera.cpp  frustum.h  instanced_model.cpp  model.h  skybox.cpp  texture2d.cpp  texture_cubemap.cpp
projects/bonus2/: frustum_culling.cpp  frustum_culling.vert
projects/bonus5/: bvh.cpp  main.cpp  raytracing.cpp  raytracing.frag
projects/get_start/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.h
projects/project1/: render_flag.cpp  star.cpp
projects/project2/: bunny.cpp  transformation.cpp
projects/project3/: scene_roaming.cpp
projects/project4/: instanced_rendering.cpp
projects/project5/: shading_tutorial.cpp
projects/project6/: texture_mapping.cpp
